# shun

./: .gitignore  CLAUDE.md  Makefile.toml  NOTICE  README.md  apm.lock.yaml  apm.yml  install.ps1  jsconfig.json  package-lock.json  package.json  renovate.json  svelte.config.js  vite.config.js
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
bucket/: shun.json
docs/: SETUP.md  install.ps1  install.sh
homebrew/: shun.rb
public/: migemo-compact-dict
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  complete.rs  config.rs  history.rs  lib.rs  main.rs  migemo.rs  search.rs  utils.rs
src/lib/: CompletionList.svelte  HelpPanel.svelte  PreviewPanel.svelte  SearchModeIcon.svelte  SearchResults.svelte  SortOrderIcon.svelte  highlight.js  themes.js  utils.js  utils.test.js
src/routes/: +layout.js  +page.svelte
winget/: yukimemi.shun.installer.yaml  yukimemi.shun.locale.en-US.yaml  yukimemi.shun.yaml
