[package]
name = "shun"
version = "1.9.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
toml_edit = "0.25"
dirs-next = "2"
nucleo-matcher = "0.3"
tera = { version = "1", default-features = false, features = ["builtins"] }
rustmigemo = { git = "https://github.com/oguna/rustmigemo" }
regex = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"
zip = "8"
tokio = { version = "1", features = ["process", "io-util"] }

[dev-dependencies]
tempfile = "3"

